--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -28,31 +28,51 @@ library(ggplot2)
 
 # Motivation---Tim
 
-This year, a report from Centers for Disease Control and Prevention revealed that America’s obesity rate has reached a record high. Contrasting to popular belief, New Yorkers are not so safe from the obesity epidemic, as more than half of adult New Yorkers are either overweight or obese. Studies show that the rise in the obesity epidemic is partly due to disparities in food environment; it is harder for some to eat healthier because their options are limited. This project intends to look deeper into the relationship between food environment in NYC and obesity rate along with diabetes rate and stroke hospitalization rate.
+**This year, a report from Centers for Disease Control and Prevention revealed that America’s obesity rate has reached a record high. Contrasting to popular belief, New Yorkers are not so safe from the obesity epidemic, as more than half of adult New Yorkers are either overweight or obese. Studies show that the rise in the obesity epidemic is partly due to disparities in food environment; it is harder for some to eat healthier because their options are limited. This project intends to look deeper into the relationship between food environment in NYC and obesity rate along with diabetes rate and stroke hospitalization rate.**
+
 
 
 # Related Work---Tim
 
-In 2008, aggregating Google search queries, Google attempted to make accurate predictions about flu activity. Then what kind of infomation on the internet that can predict the prevelence of chronic disease such as obesity, diabetes or cancer?  
-Another inspiration is that, I and my fellow classamate often go out to restaurants that are near our home for convenience, even though these restaurants were not healthy. Environment can affect some health behaviours imperceptibly。
+**In 2008, aggregating Google search queries, Google attempted to make accurate predictions about flu activity. Then what kind of infomation on the internet that can predict the prevelence of chronic disease such as obesity, diabetes or cancer?**  
+
+**Another inspiration is that, I and my fellow classamate often go out to restaurants that are near our home for convenience, even though these restaurants were not healthy. Environment can affect some health behaviours imperceptibly.**
+
+ 
  
 # Initial questions---Tim
 
-1. Can the percentage of certain fast-food restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC ? 2. Can the percentage of health inspection grade A restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC? 3. Can the composite restaurant health score of each neighborhood be related to chronic disease rate?  
-For the first two questions, we stick to it. For the third question, we change the main predictor to percentage of fast food cuisine type since it was easy to acquire in the data. Composite restaurant health score were to subjective and difficult to assess. Moreover, we calculated the boro level model first due to the difficulties we encountered in scaping zipcode-neighborhood data. However, after some struggle, we still managed to get the neighborhood information and analyze the data accordingly.
+**1. Can the percentage of certain fast-food restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC?** 
+
+**2. Can the percentage of health inspection grade A restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC?** 
+
+**3. Can the composite restaurant health score of each neighborhood be related to chronic disease rate?**
+
+**For the first two questions, we stick to it. For the third question, we change the main predictor to percentage of fast food cuisine type since it was easy to acquire in the data. Composite restaurant health score were to subjective and difficult to assess. Moreover, we calculated the boro level model first due to the difficulties we encountered in scaping zipcode-neighborhood data. However, after some struggle, we still managed to get the neighborhood information and analyze the data accordingly.**
+
+
 
 # Data and Methods
 
 ## Data Source and Collection---Tim
 
-1. NYC restaurant inspection:
-https://data.cityofnewyork.us/Health/DOHMH-New-York-City-Restaurant-Inspection-Results/43nn-pn8j  
-2. 2015 Community Health Profiles Open Data: https://www1.nyc.gov/site/doh/data/data-publications/profiles.page
+**1. NYC restaurant inspection:**
+
+https://data.cityofnewyork.us/Health/DOHMH-New-York-City-Restaurant-Inspection-Results/43nn-pn8j 
+
+**2. 2015 Community Health Profiles Open Data:** 
+
+https://www1.nyc.gov/site/doh/data/data-publications/profiles.page
   
-These data were rather easy to acquire, since they can be downloaded by CSV format. Because health and demographic data are grouped by neighborhood but the restaurant inspection data was using zipcodes. We had to match the zipcode and neighborhood name in order to merge the datasets which was the hardest. First, we scraped the table data from https://www.health.ny.gov/statistics/cancer/registry/appendix/neighborhoods.htm. However the neighborhood name and combinations were different from the health profile data we downloaded. We cannot merge the two datasets. Then we tried to look for the raw classification for the neigborhoods in health data from New York University's Furman Center for Real Estate and Urban Policy and the NYC Department of City Planning. However, still no luck becuase the neighborhood was not divided by zipcode areas. Then we tried the hardest way: search the name of the neighborhood on Google and finding the matching zipcodes. It worked out well, but it was not precise, thus we left out some of the restaurants without a matching neighborhood name.
+**These data were rather easy to acquire, since they can be downloaded by CSV format. Because health and demographic data are grouped by neighborhood but the restaurant inspection data was using zipcodes. We had to match the zipcode and neighborhood name in order to merge the datasets which was the hardest.** 
+
+**First, we scraped the table data from https://www.health.ny.gov/statistics/cancer/registry/appendix/neighborhoods.htm. However the neighborhood name and combinations were different from the health profile data we downloaded. We cannot merge the two datasets. Then we tried to look for the raw classification for the neigborhoods in health data from New York University's Furman Center for Real Estate and Urban Policy and the NYC Department of City Planning. However, still no luck becuase the neighborhood was not divided by zipcode areas. Then we tried the hardest way: search the name of the neighborhood on Google and finding the matching zipcodes. It worked out well, but it was not precise, thus we left out some of the restaurants without a matching neighborhood name.**
+
 
 ## Data Import and Cleaning---Tim
-Downloading restaurant inspection data from NYC open data
+
+**Downloading restaurant inspection data from NYC open data:**
+
 ```{r reading the New York Inspection data}
 get_all_inspections = function(url) {
   
@@ -90,7 +110,8 @@ rest_inspection = get_all_inspections(url) %>%
   bind_rows() 
 ```
 
-Downloading health and demographic data CSV into local folder and reading, cleaning it
+**Downloading health and demographic data CSV into local folder and reading, cleaning it:**
+
 ```{r reading and cleaning the health indicator data}
 download.file("https://www1.nyc.gov/assets/doh/downloads/excel/episrv/2015_CHP_PUD.xlsx", mode="wb", destfile = "health.xlsx")
 health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>% 
@@ -104,7 +125,8 @@ health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>%
   
 ```
 
-Matching the neighborhood names with restaurant zipcodes
+**Matching the neighborhood names with restaurant zipcodes:**
+
 ```{r merging the neighborhood data with restaurant data}
 zip_neighbor <- read_csv("neigh_zipcode.csv") %>% 
   mutate(zipcode = as.character(zipcode))
@@ -203,7 +225,9 @@ health_only_neighborhood %>%
 
 
 ```
+
 **Summary: Williamsbridge and Baychester have the highest obesity rate, up to 32%. East New York and Starrett City have the highest diabetes rate, up to 17 percent. BUshwick has the highest stroke hospitalization in 100,000 adults, up to 300 adults. Morrisania and Crotona has the highest percent of poverty rate, up to 40%. Fiancial district has the highest percent of young peoeple, up to 67%.**
+
 
 ## Restaurant data
 
@@ -348,7 +372,6 @@ fastfood_neighborhood %>%
   layout(yaxis = list(title = 'number of restaurants'), barmode = 'stack')
 ```
 
-
 ### Restaurant Chains---Sara
 
 ```{r reading_rest_chains_wiki, matching_with_inspection, percentage_chains_boro}
@@ -436,7 +459,6 @@ data %>%
   plot_ly(x = ~boro, y = ~grade_percent, color = ~boro, type = "bar")
 ```
 
-
 ```{r r grade_percentage for boro}
 data1 =
   rest_neighborhood %>%
@@ -453,6 +475,8 @@ data1 %>%
          neighborhood = fct_reorder(neighborhood,grade_percent)) %>% 
   plot_ly(x = ~neighborhood, y = ~grade_percent, color = ~neighborhood, type = "bar")
 ```
+
+
 
 # Formal Analysis and Findings
 
@@ -534,7 +558,6 @@ lm_sum(health_chain_join$stroke_hosp)
 
 **Percentage of diabetes and chain restaurants seems to have a lower association when visualizing the relationship. In the linear regression analysis,the p-value for the slope coeffcient, is 0.546, indicating that 0.05 significance level, there is no linear association between percentage of diabetes in boroughs and their percentage of chain restaurants. However, this was expected as the size of the data is only 6. Further research is needed.**
 
-
 ### Inspection Grade---Austin
 
 ```{r combine the health data with the grade_percentage by boro}
@@ -595,7 +618,6 @@ lm(stroke_hosp ~ percent_fastfood + racewhite_rate + age0to44_rate + poverty + s
   broom::tidy()
 ```
 
-
 ### Restaurant Chains---Sara
 
 ```{r joining_Chains_neighborhood}
@@ -629,7 +651,6 @@ percent_neighborhood_chain = left_join(neigh_count_chain, neigh_count_rest) %>%
 # joinining with health data
 health_chain_neighborhood = left_join(percent_neighborhood_chain, health_only_neighborhood) 
 ```
-
 
 ```{r lm function}
 # function for modeling health outcome and percentage of chain restaurants
@@ -673,12 +694,11 @@ lm_neighborhood(health_chain_neighborhood$diabetes)
 
 **We can also visually see there is positive correlation between diabetes and percentage of chains. From the linear regression analysis, the results show that percentage of chain restaurants in neighborhoods is a significant predictor of percentage of diabetics in NYC neighborhoods**
 
-
 ```{r modeling neighborhood chains and stroke}
 lm_neighborhood(health_chain_neighborhood$stroke_hosp)
 ```
 
-**When fitting chain_percentage, racewhite_rate, age0to44_rate, poverty,smoking, and exercise on rate of stroke however, the outcomes indicates that chain_percentage is not a significant predictor at significance level 0.05.
+**When fitting chain_percentage, racewhite_rate, age0to44_rate, poverty,smoking, and exercise on rate of stroke however, the outcomes indicates that chain_percentage is not a significant predictor at significance level 0.05.**
 
 ### Inspection Grade---Austin
 
@@ -688,13 +708,19 @@ combined1 =
   filter(neighborhood!="Missing")
 ```
 
+
+
 # Conclusion---to do later 
 
 write
 
+
+
 # Discussion---to do later 
 
 write
+
+
 
 # additional analysis/sensitivity analysis---Ruiwei
 
